--- a/ansible/roles/kraken.assembler/tasks/nodes.yaml
+++ b/ansible/roles/kraken.assembler/tasks/nodes.yaml
@@ -22,7 +22,7 @@
   vars:                                            
     dest_path: "{{ config_base | expanduser }}/{{ cluster.name }}/cloud-config/{{ item.0.name }}.cloud-config.yaml"
     file_needed: "{{ not (dest_path | is_file) }}"                                                                 
-    not_etcd_node: "{{ item.0.etcdConfig is not defined }}"                                                        
+    not_etcd_node: "{{ item.0.etcdConfigs is not defined }}"                                                        
   when:                                                    
     - file_needed or not_etcd_node                                                                                 
   with_together:                                   
