--- a/ansible/roles/kraken.config/files/config.yaml
+++ b/ansible/roles/kraken.config/files/config.yaml
@@ -202,18 +202,21 @@ definitions:
           forceFormat: true
         -
           device: sdg
-          path: /ephemeral
+          path: /ephemeral/etcd
+          forceFormat: false
+        -
+          device: sdh
+          path: /ephemeral/events
           forceFormat: false
       providerConfig:
         enablePublicIPs: true
         provider: aws
-        # m4.16xlarge recommended for 5K scalability clusters. See goo.gl/dxQuYD
-        type: m4.large
+        type: m4.16xlarge
         subnet: ["zone-1", "zone-2", "zone-3"]
         tags:
           -
             key: comments
-            value: "Cluster etcd"
+            value: "Cluster & events etcd"
         storage:
           -
             type: ebs_block_device
@@ -229,38 +232,6 @@ definitions:
             opts:
               device_name: sdg
               volume_type: gp2
-              volume_size: 10
-              delete_on_termination: true
-              snapshot_id:
-              encrypted: false
-    - &defaultAwsEtcdEventsNode
-      name: defaultAwsEtcdEventsNode
-      kind: node
-      mounts:
-        -
-          device: sdf
-          path: /var/lib/docker
-          forceFormat: true
-        -
-          device: sdg
-          path: /ephemeral
-          forceFormat: false
-      providerConfig:
-        enablePublicIPs: true
-        provider: aws
-        # m4.16xlarge recommended for 5K scalability clusters. See goo.gl/dxQuYD
-        type: m4.large
-        subnet: ["zone-1", "zone-2", "zone-3"]
-        tags:
-          -
-            key: comments
-            value: "Cluster events etcd"
-        storage:
-          -
-            type: ebs_block_device
-            opts:
-              device_name: sdf
-              volume_type: gp2
               volume_size: 100
               delete_on_termination: true
               snapshot_id:
@@ -268,9 +239,9 @@ definitions:
           -
             type: ebs_block_device
             opts:
-              device_name: sdg
+              device_name: sdh
               volume_type: gp2
-              volume_size: 10
+              volume_size: 100
               delete_on_termination: true
               snapshot_id:
               encrypted: false
@@ -468,20 +439,10 @@ deployment:
           # configuration is required to tolerate a single node failure during
           # node upgrades.
           count: 5
-          etcdConfig: *defaultEtcd
+          etcdConfigs: [*defaultEtcd, *defaultEtcdEvents]
           containerConfig: *defaultDocker
           osConfig: *defaultCoreOs
           nodeConfig: *defaultAwsEtcdNode
-          keyPair: *defaultKeyPair
-        - name: etcdEvents
-          # 5 nodes recommended for production/high availability clusters. This
-          # configuration is required to tolerate a single node failure during
-          # node upgrades.
-          count: 5
-          etcdConfig: *defaultEtcdEvents
-          containerConfig: *defaultDocker
-          osConfig: *defaultCoreOs
-          nodeConfig: *defaultAwsEtcdEventsNode
           keyPair: *defaultKeyPair
         - name: master
           count: 3
