--- a/ansible/roles/kraken.nodePool/kraken.nodePool.etcd/tasks/main.yaml
+++ b/ansible/roles/kraken.nodePool/kraken.nodePool.etcd/tasks/main.yaml
@@ -1,10 +1,12 @@
 ---
 - name: Generate etcd unit files from templates
-  include: template-etcd.yaml
+  include: etcd_configs.yaml
   with_subelements:
     - "{{ kraken_config.clusters }}"
     - nodePools
   loop_control:
     loop_var: cluster_node_tuple
-  when: cluster_node_tuple.1.etcdConfig is defined
+  when: cluster_node_tuple.1.etcdConfigs is defined
         and cluster_node_tuple.0.providerConfig.type == 'cloudinit'
+
+
